# obelisk-example

./: .gitignore  README.md  default.nix  shell.nix  static.nix
.obelisk/impl/: default.nix
backend/: backend.cabal  feed.xml.tpl
backend/src/: AppData.hs  Auth.hs  Backend.hs  Config.hs  DbAdapter.hs  Handler.hs  Handlers.hs  Model.hs  Options.hs
backend/src/DbAdapter/: Instances.hs
backend/src/Handler/: Auth.hs  Feed.hs  Serendipity.hs  User.hs
backend/src/Model/: Custom.hs
common/: common.cabal
common/src/: Auth.hs  Common.hs  Model.hs  Route.hs
common/src/Common/: Api.hs  Auth.hs  Model.hs  Route.hs
common/src/Model/: Custom.hs
config/backend/: jwk  params
dep/hspec-snap/: git.json  update.sh
frontend/: frontend.cabal
frontend/src/: Client.hs  Frontend.hs  MediaQuery.hs  PagesPodcast.hs  PagesUser.hs  Shared.hs  State.hs
frontend/src-bin/: main.hs
frontend/src/Elements/: Auth.hs  Common.hs  Shared.hs
frontend/src/Pages/: Podcast.hs
static-app/: hie.yaml  release.nix  static-app.cabal
static-app/app/: Main.hs
static-css/: release.nix
static-css/app/: Main.hs
