name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , aeson-pretty
    , bytestring
    , common
    , data-default
    , directory
    , jose
    , frontend
    , monad-logger
    , mtl
    , mysql
    , network
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-route
    , persistent
    , persistent-template
    , persistent-mysql
    , resource-pool
    , resourcet
    , servant-snap
    , servant
    , snap-core
    , text
    , time
  exposed-modules:
    Backend
  other-modules:
      AppData
    , Config
    , Handlers
    , Model
    , Model.Custom
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend
