name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , aeson-pretty
    , blaze-markup
    , bytestring
    , common
    , containers
    , data-default
    , directory
    , jose
    , frontend
    , file-embed
    , gerippe
    , heterocephalus
    , lens
    , lifted-base
    , monad-logger
    , mtl
    , mysql
    , network
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-route
    , password
    , persistent
    , persistent-mysql
    , resource-pool
    , resourcet
    , safe
    , servant-snap
    , servant
    , snap-core
    , text
    , time
    , utf8-string
  exposed-modules:
    Backend
  other-modules:
      AppData
    , Auth
    , Config
    , Handlers
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend
