name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , aeson-pretty
    , blaze-markup
    , bytestring
    , common
    , containers
    , data-default
    , directory
    , either
    , jose
    , frontend
    , file-embed
    , gerippe
    , heterocephalus
    , lens
    , lifted-base
    , monad-logger
    , monad-time
    , mtl
    , mysql
    , network
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-route
    , password
    , password-instances
    , persistent
    , persistent-mysql
    , resource-pool
    , resourcet
    , safe
    , servant-snap
    , servant
    , snap-core
    , text
    , text-show
    , time
    , transformers
    , utf8-string
  exposed-modules:
    Backend
  other-modules:
       AppData
     , Auth
     , Config
     , Database
     , DbJournal
     , Handler
     , Handler.Auth
     , Handler.Feed
     , Handler.User
     , Handler.Serendipity
     , DbAdapter
     , DbAdapter.Instances
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend
