name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , bytestring
    , categories
    , containers
    , http-api-data
    , http-media
    , lens
    , obelisk-route
    , modern-uri
    , mtl
    , reflex-dom
    , servant
    , servant-reflex
    , text
    , time
  exposed-modules:
      Common
    , Common.Api
    , Common.Auth
    , Common.Model
    , Common.Route
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
