name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , clay
    , common
    , containers
    , data-default
    , ghcjs-dom
    , jsaddle
    , modern-uri
    , mtl
    , obelisk-frontend
    , obelisk-executable-config-lookup
    , obelisk-generated-static
    , obelisk-route
    , raw-strings-qq
    , reflex-dom
    , regex-tdfa
    , servant
    , servant-reflex
    , text
    , time
    , transformers
    , witherable
  exposed-modules:
      Frontend
  other-modules:
      Client
    , PagesPodcast
    , PagesUser
    , MediaQuery
    , Shared
    , State
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , frontend
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , reflex-dom
    , time
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
